scrollbar fix

--- a/electron-app/css/style.css
+++ b/electron-app/css/style.css
@@ -5,7 +5,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 6px;        
+  width: 2px;        
   height: 6px;              
 }
 
@@ -14,22 +14,22 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0,0,0,0.4); 
+  background-color: rgba(209, 209, 209, 0.4); 
   border-radius: 3px;                
   transition: background-color 0.2s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(206, 206, 206, 0.6);
 }
 
 * {
   scrollbar-width: thin; 
-  scrollbar-color: rgba(0,0,0,0.4) transparent;
+  scrollbar-color: rgba(194, 194, 194, 0.4) transparent;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  scrollbar-color: rgba(0,0,0,0.6) transparent;
+  scrollbar-color: rgba(209, 209, 209, 0.6) transparent;
 }
 
 .container{
